--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,6 +7,7 @@
       <th>Author</th>
       <th>Description</th>
       <th>Amazon</th>
+      <th>Have you read it?</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,13 +15,11 @@
   <tbody>
     <% @books.each do |book| %>
       <tr>
-        <td><%= book.title %></td>
+        <td><%= link_to book.title, book %></td>
         <td><%= book.author %></td>
         <td><%= book.description %></td>
         <td><%= book.amazon_id %></td>
-        <td><%= link_to 'Show', book %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= book.finished? %></td>
       </tr>
     <% end %>
   </tbody>
