--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,7 +14,7 @@
 
   <tbody>
     <% @books.each do |book| %>
-      <tr>
+      <tr class="<%= 'finished' if book.finished? %>">
         <td><%= link_to book.title, book %></td>
         <td><%= book.author %></td>
         <td><%= book.description %></td>
