--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -13,6 +13,7 @@
       <th>Amazon</th>
       <th>Have you read it?</th>
       <th>Rating</th>
+      <th>Genres</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -26,6 +27,10 @@
         <td><%= image_from_amazon(book.amazon_id) %></td>
         <td><%= book.finished? %></td>
         <td><%= book.rating %></td>
+        <td><% book.genres.each do |genre| %>
+          <%= genre.name %>
+        <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
