--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -13,7 +13,8 @@
       <th>Amazon</th>
       <th>Have you read it?</th>
       <th>Rating</th>
-      <th>Genres</th>
+      <th>Book Genres</th>
+      <th>All Genres</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -29,6 +30,10 @@
         <td><%= book.rating %></td>
         <td><% book.genres.each do |genre| %>
           <%= genre.name %>
+        <% end %>
+        </td>
+        <td><% @genres.each do |genre| %>
+          <%= link_to genre.name, books_path(filter: genre.id) %>
         <% end %>
         </td>
       </tr>
