--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Listing books</h1>
 
+<%= link_to 'New Book', new_book_path %>
+
 <div>
   <input type='text' class='search-form' value='<%= params[:keyword] %>' name='keyword' placeholder='Keyword' >
 </div>
@@ -19,28 +21,4 @@
     </tr>
   </thead>
 
-  <tbody>
-    <% @books.each do |book| %>
-      <tr class="<%= 'finished' if book.finished? %>">
-        <td><%= link_to book.title, book %></td>
-        <td><%= book.author %></td>
-        <td><%= book.description %></td>
-        <td><%= image_from_amazon(book.amazon_id) %></td>
-        <td><%= book.finished? %></td>
-        <td><%= book.rating %></td>
-        <td><% book.genres.each do |genre| %>
-          <%= genre.name %>
-        <% end %>
-        </td>
-        <td><% @genres.each do |genre| %>
-          <%= link_to genre.name, books_path(filter: genre.id) %>
-        <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Book', new_book_path %>
+<%= render @books %>
